[project]
name = "pid-image-upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "av>=17.0.1",
    "boto3>=1.43.18",
    "botocore>=1.43.18",
    "diffusers",
    "einops>=0.8.2",
    "fvcore>=0.1.5.post20221221",
    "gradio==5.49.1",
    "hf-xet>=1.5.0",
    "huggingface-hub>=0.36.2",
    "hydra-core>=1.3.2",
    "imageio>=2.37.3",
    "iopath>=0.1.10",
    "kernels>=0.12.3",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.13.0.92",
    "peft",
    "pyyaml>=6.0.3",
    "sentencepiece>=0.2.1",
    "spaces>=0.50.2",
    "termcolor>=3.3.0",
    "torch==2.11.0",
    "torchvision>=0.26.0",
    "transformers",
    "wandb>=0.27.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "v4.57.6" }
accelerate = { git = "https://github.com/huggingface/accelerate.git" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
peft = { git = "https://github.com/huggingface/peft.git" }
